cookie consent more visible and fixed the jquery overwrite of all a tags

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -21,6 +21,11 @@
 	}
 }
 
+#cookie-notice{
+  background: $secondary-brand-color; 
+  color: rgba(0,0,0,0.9);
+}
+
 @media #{$mid-point} {
   header {
     background:transparent !important;
